updated fonts, tweaked phrases, general design

--- a/app/assets/stylesheets/components/_home_tab.scss
+++ b/app/assets/stylesheets/components/_home_tab.scss
@@ -1,6 +1,7 @@
 #tab-1-content {
   h2 {
     font-size: 21px;
+    font-family: 'Rajdhani', sans-serif;
   }
   h3 {
     font-size: 15px;
@@ -21,4 +22,5 @@
   justify-content: space-between;
   margin-bottom: 10px;
   width: 100%;
+  font-family: 'Rajdhani', sans-serif;
 }
