--- a/app/assets/stylesheets/components/_input_field.scss
+++ b/app/assets/stylesheets/components/_input_field.scss
@@ -7,6 +7,8 @@
   margin-bottom: 30px;
   background-color: white;
   color: rgb(114, 114, 114);
+  font-family: 'Rajdhani', sans-serif;
+  font-size: 20px;
   h2 {
     font-size: 18px;
     text-align: center;
@@ -22,6 +24,10 @@
     text-align: center;
   }
   // border: 2px solid red;
+}
+.btn {
+  font-family: 'Rajdhani', sans-serif;
+  font-size: 22px;
 }
 
 // .form-text {
