--- a/app/assets/stylesheets/components/_logo.scss
+++ b/app/assets/stylesheets/components/_logo.scss
@@ -18,17 +18,17 @@
   margin-bottom: 14px;
   h3 {
     color: rgb(114, 114, 114);
-    font-family: 'Poppins', sans-serif;
-    font-size: 23px;
+    font-family: 'Rajdhani', sans-serif;
+    font-size: 27px;
     font-weight: 600;
     text-align: center;
     margin: 0px;
     line-height: 20px;
   }
   h2 {
-    font-size: 37px;
+    font-size: 44px;
     color: rgb(114, 114, 114);
-    font-family: 'Poppins', sans-serif;
-    font-weight: 600;
+    font-family: 'Rajdhani', sans-serif;
+    font-weight: 900;
   }
 }
