--- a/app/assets/stylesheets/components/_map_search_bar.scss
+++ b/app/assets/stylesheets/components/_map_search_bar.scss
@@ -29,3 +29,8 @@
 .mapboxgl-ctrl-geocoder.mapboxgl-ctrl {
   margin: auto !important;
 }
+
+.mapboxgl-ctrl-geocoder--input {
+  font-family: 'Rajdhani', sans-serif !important;
+  font-size: 22px !important;
+}
