--- a/app/assets/stylesheets/components/_book_now_button.scss
+++ b/app/assets/stylesheets/components/_book_now_button.scss
@@ -6,11 +6,11 @@
   height: 40px;
   border-radius: 25px;
   font-weight: bold;
-  font-size: large;
+  font-size: 25px;
   text-decoration: none;
   border: red;
-  padding-top: .2rem
-  ;
+  padding-top: .2rem;
+  font-family: 'Rajdhani', sans-serif;
   border-color: $default-red;
   a {
     color: white;
