--- a/app/assets/stylesheets/components/_dashboard_tab.scss
+++ b/app/assets/stylesheets/components/_dashboard_tab.scss
@@ -6,6 +6,7 @@
   height: 66px;
   margin: 0px 30px;
   padding-top: 30px;
+  font-family: 'Rajdhani', sans-serif;
 }
 
 // their style
@@ -23,7 +24,7 @@
   // box-shadow: 2px 2px 0px rgb(172, 172, 172);
 
   h4 {
-    font-size: 15px;
+    font-size: 19px;
     line-height: 20px;
     color: grey;
   }
@@ -37,6 +38,7 @@
   box-shadow: 0px 0px 0px, inset 3px 3px 0px rgb(172, 172, 172);
   h4 {
     color: grey;
+    font-weight: 600;
   }
 }
 
@@ -63,7 +65,7 @@
     text-align: center;
   }
   p {
-    font-size: 12px;
+    font-size: 16px;
     line-height: 13px;
     margin: 8px 0;
     text-align: center;
@@ -98,10 +100,13 @@
 // for the card design
 .tab-card {
   border-radius: 8px;
-  padding: 50px;
+  padding: 45px;
   margin-bottom: 30px;
   background-color: white;
   color: rgb(114, 114, 114);
+  font-family: 'Rajdhani', sans-serif;
+  font-size: 35px;
+
   ul {
     margin: 0;
     margin-top: 15px;
