--- a/app/assets/stylesheets/components/_mapbox_info_window.scss
+++ b/app/assets/stylesheets/components/_mapbox_info_window.scss
@@ -1,11 +1,11 @@
 .mapboxgl-popup-content {
   border-radius: 25px !important;
-  background-color: rgb(228, 228, 228) ;
+  background-color: rgb(255, 255, 255) !important;
   color: black;
   // background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,1)) !important;
   box-shadow: 5px 5px 15px !important;
   position: relative;
-  left: 27px;
+  left: 24px;
   top: 5rem;
   padding: 15px 10px 15px !important;
   //margin: 2rem;
@@ -16,6 +16,16 @@
 .info-window-text   {
   padding: 8px;
   padding-top: 10px;
+  font-family: 'Rajdhani', sans-serif;
+  font-size: 16px;
+}
+
+.info-window-text h3 {
+  color: $default-red;
+  font-size: 22px;
+  font-family: 'Rajdhani', sans-serif;
+  font-weight: bolder;
+  text-align: center;
 }
 
 .mapboxgl-ctrl-geolocate {
@@ -26,6 +36,12 @@
 .mapboxgl-ctrl-icon {
   background-image: url("crosshairgood.png") !important;
   background-size: contain !important;
+  height: 22px !important;
+  width: 30px !important;
+}
+
+.mapboxgl-ctrl-logo {
+  display: none !important;
 }
 
 .mapboxgl-ctrl-bottom-right {
