--- a/app/assets/stylesheets/components/_plugshow.scss
+++ b/app/assets/stylesheets/components/_plugshow.scss
@@ -9,16 +9,19 @@
   h2 {
     // font-size: 23px;
     // text-align: center;
-    font-size: 15px;
+    font-size: 20px;
     text-align: center;
     color: rgb(114, 114, 114);
     font-weight: 400;
+    font-family: 'Rajdhani', sans-serif;
   }
   h3 {
     // margin-bottom: 65px;
     text-align: center;
     font-weight: normal;
-    font-size: 12px;
+    font-size: 16px;
     line-height: 19px;
+    padding: 1px;
+    font-family: 'Rajdhani', sans-serif;
   }
 }
