--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -4,8 +4,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@500;600&display=swap');
 
 // Define fonts for body and headers
-$body-font: 'Poppins', sans-serif;;
-$headers-font: 'Poppins', sans-serif;;
+$body-font: 'Rajdhani', sans-serif;;
+$headers-font: 'Rajdhani', sans-serif;;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
