changed dollars to euros

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -15,8 +15,8 @@
           <p data-booking-info-target="time" id="time">00:00:00</p>
         </div>
         <div class="booking-info-text-values-cost">
-          <p>Cost: $<%= @plug.fixed_cost_per_15_min %> per 15min</p>
-          <p data-booking-info-target="cost" id="cost">$0.00</p>
+          <p>Cost: <%= @plug.fixed_cost_per_15_min %>€ per 15min</p>
+          <p data-booking-info-target="cost" id="cost">0.00€</p>
         </div>
       </div>
       <div class="stop-button" data-booking-info-target="fakebutton">
