--- a/app/views/plugs/new.html.erb
+++ b/app/views/plugs/new.html.erb
@@ -13,7 +13,7 @@
                   required: true,
                   autofocus: true,
                   as: :numeric,
-                  placeholder: 'eg. $0.50' %>
+                  placeholder: 'eg. 0.50€' %>
       <%= f.input :plug_type,
                   collection: [1, 2],
                   required: true,
