--- a/app/views/bookings/approve.html.erb
+++ b/app/views/bookings/approve.html.erb
@@ -20,7 +20,7 @@
     <button class="btn btn-default" id="card-button">Save Card</button>
   </div>
   <div class="tab-content-separator"> </div>
-    <div class="submit-buttons">
+    <div class="cancel-button">
       <%= link_to "Cancel", plugs_path %>
     </div>
   </div>
