--- a/app/assets/stylesheets/components/_payment_page.scss
+++ b/app/assets/stylesheets/components/_payment_page.scss
@@ -38,12 +38,17 @@
 }
 
 .cancel-button {
-  color: gb(114, 114, 114);
+  color: rgb(0, 0, 0);
   text-decoration: none;
   padding: 4px;
   font-family: 'Rajdhani', sans-serif;
   font-size: 19px;
   font-weight: 400;
+  text-align: center;
+  a {
+    color: black;
+    text-decoration: none;
+  }
 }
 
 .book-now-button {
