fixed the error and moved the menu ´button at least

--- a/app/assets/stylesheets/components/_map_search_bar.scss
+++ b/app/assets/stylesheets/components/_map_search_bar.scss
@@ -22,6 +22,10 @@
   left: 33px;
 }
 
+.mapboxgl-ctrl.mapboxgl-ctrl-group.move-up {
+  top: calc(100vh - 320px);
+}
+
 .mapboxgl-canvas {
   width: 100vw !important;
 }
