--- a/app/assets/stylesheets/components/_dashboard_tab.scss
+++ b/app/assets/stylesheets/components/_dashboard_tab.scss
@@ -65,8 +65,8 @@
     text-align: center;
   }
   p {
-    font-size: 16px;
-    line-height: 13px;
+    font-size: 15px;
+    line-height: 19px;
     margin: 8px 0;
     text-align: center;
   }
@@ -104,7 +104,7 @@
   margin-bottom: 30px;
   background-color: white;
   color: rgb(114, 114, 114);
-  font-family: 'Rajdhani', sans-serif;
+  // font-family: 'Rajdhani', sans-serif;
   font-size: 35px;
 
   ul {
