--- a/app/assets/stylesheets/components/_menu.scss
+++ b/app/assets/stylesheets/components/_menu.scss
@@ -14,6 +14,7 @@
   padding-top: 46px;
   white-space: nowrap;
   z-index: 2;
+  transition: 0.4s;
   h2 {
     font-family: 'Rajdhani', sans-serif;
     font-size: 40px;
