--- a/app/assets/stylesheets/components/_menu_button.scss
+++ b/app/assets/stylesheets/components/_menu_button.scss
@@ -1,4 +1,4 @@
-.container {
+.menu-button-container {
   height: auto;
   width: auto;
   display: inline-block;
@@ -15,7 +15,11 @@
   z-index: 2;
 }
 
-.container.change-button {
+.menu-button-container.move-up {
+  top: calc(100% - 320px);
+}
+
+.menu-button-container.change-button {
   transition: 0.4s;
   background-color: white;
   // opacity: 0;
