--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -6,6 +6,8 @@
 // Define fonts for body and headers
 $body-font: 'Rajdhani', sans-serif;;
 $headers-font: 'Rajdhani', sans-serif;;
+// $body-font: 'Poppins', sans-serif;;
+// $headers-font: 'Poppins', sans-serif;;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
