--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -18,6 +18,7 @@
           <% end %>
         <% end %>
         <br>
+        <%= current_page?("/plugs/#{params[:plug_id]}/bookings/#{params[:id]}") %>
         <%= link_to 'SIGN OUT', destroy_user_session_path, method: :delete, data: { confirm: "Are you sure?" }, class: "submit-button" %>
       </div>
       <div class="content-separator"></div>
@@ -31,12 +32,21 @@
   </div>
 
   <div>
-    <div class="container" data-action="click->menu-slider#toggleMenu"
-         data-menu-slider-target="button">
-      <div class="bar1"></div>
-      <div class="bar2"></div>
-      <div class="bar3"></div>
-    </div>
+    <% if current_page?("/plugs/#{params[:plug_id]}/bookings/#{params[:id]}") %>
+      <div class="menu-button-container move-up" data-action="click->menu-slider#toggleMenu"
+          data-menu-slider-target="button">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+      </div>
+    <% else %>
+      <div class="menu-button-container" data-action="click->menu-slider#toggleMenu"
+          data-menu-slider-target="button">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+      </div>
+    <% end %>
   </div>
 
   <%# <div id="menu-content" data-menu-slider-target="menuContent">
