fixed my chargerpage and menu bug

--- a/app/views/plugs/edit.html.erb
+++ b/app/views/plugs/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="logo charger">
   <h3><%= @user.first_name %> <%= @user.last_name %>'s</h3>
-  <h2 style="margin-top:5px">CHARGE SHARING</h2>
+  <h2 style="margin-top:5px">CHARGERPAGE</h2>
   <%# <div style="display:flex;justify-content:space-between;margin-top:5px;padding:0px 4px"><h2>C</h2><h2>H</h2><h2>A</h2><h2>R</h2><h2>G</h2><h2>E</h2><h2>R</h2><div style="width:10px"></div><h2>P</h2><h2>A</h2><h2>G</h2><h2>E</h2></div> %>
 </div>
 
