added favourite oage

--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -18,6 +18,8 @@
           <% end %>
         <% end %>
         <br>
+        <%= link_to 'FAVOURITES', all_favourites_path %>
+        <br>
         <%= link_to 'SIGN OUT', destroy_user_session_path, method: :delete, data: { confirm: "Are you sure?" }, class: "submit-button" %>
       </div>
       <div class="content-separator"></div>
