just minor change

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -225,6 +225,7 @@
     </div>
   <% else %>
     <div class="tab-card">
+      <h3>YOUR REVIEWS</h3>
       <div class="tab-content-separator"></div>
       <p>No bookings, no reviews!</p>
       <p><%= link_to 'Let\'s book', root_path, style: "z-index:99999"%></p>
