--- a/app/assets/stylesheets/pages/_charger_page.scss
+++ b/app/assets/stylesheets/pages/_charger_page.scss
@@ -13,6 +13,7 @@
   background-color: white;
   color: rgb(114, 114, 114);
   height: 120px;
+  box-shadow: 2px 3px;
   h2 {
     font-size: 18px;
     text-align: center;
