--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -18,7 +18,7 @@
         </div>
       <% end %>
     <% end %>
-    <p style="font-size:13px;text-align:center;color:rgb(114, 114, 114)">Click one, to see details and press + to add a new one!</p>
+    <p style="font-size:13px;text-align:center;color:rgb(114, 114, 114)">Click one to see the details and press + to add a new one!</p>
   <% else %>
     <div class="chargercard">
       <h2>Press + at the bottom.</h2>
