--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -25,5 +25,5 @@
 @import "booking_popup";
 @import "charger_card";
 @import "stop_booking_page";
-@import "tab_card_favorite"
+@import "tab_card_favorite";
 @import "favourite_button"
