--- a/app/assets/stylesheets/components/_mapbox_info_window.scss
+++ b/app/assets/stylesheets/components/_mapbox_info_window.scss
@@ -36,12 +36,12 @@
 }
 
 .mapboxgl-ctrl-geolocate {
-  background-image: url("crosshairgood.png") !important;
+  background-image: url("weapon-crosshair.png") !important;
   border-radius: 50px;
 }
 
 .mapboxgl-ctrl-icon {
-  background-image: url("crosshairgood.png") !important;
+  background-image: url("weapon-crosshair.png") !important;
   background-size: contain !important;
   height: 22px !important;
   width: 28px !important;
