--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -265,16 +265,15 @@
     <h3 class="mb-4">MY PLUG BOOKINGS <i class="fas fa-charging-station"></i></h3>
     <% if @user.plugs.last %>
       <% @user.plugs.each do |plug| %>
+        <div class="tab-content-separator"></div>
         <p><%= plug.location.upcase %></p>
         <% if plug.bookings.last %>
-          <% plug.bookings.each do |booking| %>
-            <div class="tab-content-separator"></div>
+          <% plug.bookings.where("status = 1").each do |booking| %>
             <p><%= booking.user.first_name %> <%= booking.user.last_name %></p>
             <p><%= booking.created_at.strftime('%A, %d %b') %></p>
             <p><%= booking.created_at.strftime('%l:%M %p') %> - <%=  (booking.created_at + booking.duration.minutes).strftime('%l:%M %p') %></p>
           <% end %>
         <% else %>
-          <div class="tab-content-separator"></div>
           <p>Sorry, your plug wasn't booked yet...</p>
         <% end %>
       <% end %>
